Requires:
~~~~~~~~~
-
New features:
~~~~~~~~~~~~~
-
Bug fixes:
~~~~~~~~~~
- Fix CPSZippedHtmlWidget edition and preview mode (refactoring of the
File based widgets went wrong)
New internal features:
~~~~~~~~~~~~~~~~~~~~~~
- Lines Widget now has a configurable separator in view mode
- The various file and image widgets macros don't have a label_title
slot anymore.