@@ -3,7 +3,8 @@ Requires:
 -
 New features:
 ~~~~~~~~~~~~~
--
+- #1378: transtyping allows changing the type of fields and widgets
+  in extension profiles.
 Bug fixes:
 ~~~~~~~~~~
 - Fix CPSZippedHtmlWidget edition and preview mode (refactoring of the
